--- a/client/index.html
+++ b/client/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Codeboard Screen Cast</title>
+    <title>Screen Cast</title>
 
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
     <div class="header">
-        Codeboard Screen Share
+        Remote Desktop
     </div>
-    <div class="code" id="code"></div>
 
     <div class="container">
-        <button class="btn" id="start" onclick="startShare()"> Start Share </button>
-        <button class="btn" id="stop" onclick="stopShare()"> Stop Share </button>
+        <button class="btn" id="start" onclick="startShare()"> Share! </button>
+        <button class="btn" id="stop" onclick="stopShare()"> Share! </button>
     </div>
+
+         <div class="code" id="code">ROOM PHRASE</div>
 
     <script src="index.js"></script>
 
