--- a/server/display.html
+++ b/server/display.html
@@ -1,18 +1,20 @@
 <html lang="en">
+
 <head>
     <title>Codeboard Screecast Viewer</title>
 </head>
-<body style="background: linear-gradient(45deg, #7b0909, #6771b8b8);">
-    <img style="width:1920px; height:1080px; margin-top: 2%; margin-left: 5%"/>
+
+<body style="background: linear-gradient(45deg, #804a03, #a81989b8);">
+    <img style="width:90%; height:90%; margin-top: 2%; margin-left: 5%" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" crossorigin="anonymous"></script>
     <script>
 
-        window.onload = function() {
-            var room = prompt("Please enter room ID : ");
-            if(room.trim().length == 0) {
-                document.write("<h1> Room ID is mandatory to join </h1>");
+        window.onload = function () {
+            let room = prompt('Please, enter Room Phrase: ');
+            if (room.trim().length == 0) {
+                document.write('<h1> Room Phrase is necessary to join! </h1>');
                 return;
             }
             protocol = window.location.protocol;
@@ -22,39 +24,40 @@
             console.log(host);
             console.log(port);
 
-            connectAddr = protocol+'//'+host+':'+port;
+            connectAddr = protocol + '//' + host + ':' + port;
             socket = io.connect(connectAddr);  // 'http://192.168.0.101:5000'
 
-            socket.emit("join-message", room);
-            socket.on('screen-data', function(message){
-                $("img").attr("src", "data:image/png;base64," + message);
+            socket.emit('join-message', room);
+            socket.on('screen-data', function (message) {
+                $('img').attr('src', 'data:image/png;base64,' + message);
             })
 
-            $("img").mousemove(function(e){
+            $('img').mousemove(function (e) {
 
-                var posX = $(this).offset().left;
-                var posY = $(this).offset().top;
+                let posX = $(this).offset().left;
+                let posY = $(this).offset().top;
 
-                var x = e.pageX - posX;
-                var y = e.pageY - posY;
+                let x = e.pageX - posX;
+                let y = e.pageY - posY;
 
-                var obj = {"x" : x, "y": y, "room": room}
-                socket.emit("mouse-move", JSON.stringify(obj));
+                let obj = { 'x': x, 'y': y, 'room': room }
+                socket.emit('mouse-move', JSON.stringify(obj));
 
             })
 
-            $("img").click(function(e){
-                var obj = {"room" : room};
-                socket.emit("mouse-click", JSON.stringify(obj));
+            $('img').click(function (e) {
+                let obj = { 'room': room };
+                socket.emit('mouse-click', JSON.stringify(obj));
             })
 
-            $(window).bind("keyup", function(e) {
-
-                var obj = {"key": e.key, "room" : room};
-                socket.emit("type", JSON.stringify(obj));
+            $(window).bind('keyup', function (e) {
+                console.log('key pushed: '+e.key);
+                let obj = { 'key': e.key, 'room': room };
+                socket.emit('type', JSON.stringify(obj));
             })
         }
 
     </script>
 </body>
+
 </html>
