--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <button class="btn" id="start" onclick="startShare()"> Share! </button>
-        <button class="btn" id="stop" onclick="stopShare()"> Share! </button>
+        <button class="btn" id="stop" onclick="stopShare()"> Break! </button>
     </div>
 
          <div class="code" id="code">ROOM PHRASE</div>
