--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
         <button class="btn" id="start" onclick="startShare()"> Share! </button>
         <button class="btn" id="stop" onclick="stopShare()"> Break! </button>
     </div>
-
-         <div class="code" id="code">ROOM PHRASE</div>
+        <div class="link" id="link" style="float:left;">LINK</div>
+         <div class="code" id="code" style="float:right;">ROOM PHRASE</div>
 
     <script src="index.js"></script>
 
