--- a/server/display.html
+++ b/server/display.html
@@ -8,7 +8,7 @@ background-image: url(../utils/floating-cogs.svg);">
 
 <body style="background-color: #DFDBE5;
 background-image: linear-gradient(to right, #434343 0%, black 100%);">
-    <img style="width:90%; height:90%; margin-top: 2%; margin-left: 5%" />
+    <img style="width:1920px; height:1080px; margin-top: 10px; margin-left: 10px" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" crossorigin="anonymous"></script>
     <script>
@@ -19,14 +19,14 @@ background-image: linear-gradient(to right, #434343 0%, black 100%);">
                 document.write('<h1> Room Phrase is necessary to join! </h1>');
                 return;
             }
-            protocol = window.location.protocol;
-            host = window.location.hostname;
-            port = window.location.port;
+            const protocol = window.location.protocol;
+            const host = window.location.hostname;
+            const port = window.location.port;
             console.log(protocol);
             console.log(host);
             console.log(port);
 
-            connectAddr = protocol + '//' + host + ':' + port;
+            const connectAddr = protocol + '//' + host + ':' + port;
             socket = io.connect(connectAddr);  // 'http://192.168.0.101:5000'
 
             socket.emit('join-message', room);
