--- a/daemon/display.html
+++ b/daemon/display.html
@@ -8,7 +8,7 @@ background-image: url(../utils/floating-cogs.svg);">
 
 <body style="background-color: #DFDBE5;
 background-image: linear-gradient(to right, #434343 0%, black 100%);">
-    <img style="width:1920px; height:1080px; margin-top: 10px; margin-left: 10px" />
+    <img style="width:1920px; height:1080px; margin-top: 3%; margin-left: 3%" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" crossorigin="anonymous"></script>
     <script>
@@ -48,6 +48,7 @@ background-image: linear-gradient(to right, #434343 0%, black 100%);">
             })
 
             $('img').click(function (e) {
+                isClick = true;
                 const obj = { 'room': room };
                 socket.emit('mouse-click', JSON.stringify(obj));
             })
@@ -58,10 +59,27 @@ background-image: linear-gradient(to right, #434343 0%, black 100%);">
                 return false; // Disable context-menu
             })
 
+            $('img').mouse
+
+            /*$('img').mousedown(function (e) {
+                console.log("*Mouse down!");
+                const obj = { 'room': room };
+                socket.emit('mouse-down', JSON.stringify(obj));
+                return false;
+            })
+
+            $('img').mouseup(function (e) {
+                console.log("*Mouse up!");
+                const obj = { 'room': room };
+                socket.emit('mouse-up', JSON.stringify(obj));
+                return false;
+            })*/
+
             $(window).bind('keyup', function (e) {
                 console.log('key pushed: '+e.key);
                 const obj = { 'key': e.key, 'room': room };
                 socket.emit('type', JSON.stringify(obj));
+                return false;
             })
         }
 
