--- a/daemon/display.html
+++ b/daemon/display.html
@@ -3,7 +3,7 @@ background-image: url(../utils/floating-cogs.svg);">
 
 <head>
     <link rel="stylesheet" href="style.css" />
-    <title>Codeboard Screecast Viewer</title>
+    <title>Remote</title>
 </head>
 
 <body style="background-color: #DFDBE5;
